tests/script_runtime_errors/function_error_1/error.txt
Error: 
    4 | record::from_array(a)
      | ^^^^^^^^^^^^^^^^^^^^^ Bad type passed to function record::from_array/1